# QSQLiteSyncEngine

./: .gitignore  CMakeLists.txt  README.md  qsqlitesyncengine-module.html  qsqlitesyncengine.index  syncengine-syncengine-members.html  syncengine-syncengine.html  syncengine.html
.github/workflows/: ci.yml
demo/: main.cpp
docs/: qsqlitesyncengine.qdocconf
src/driver/: qsql_sqlite.cpp  qsqlite_sync.json  smain.cpp
src/syncengine/: ChangesetManager.cpp  ChangesetManager.h  ConflictResolver.cpp  ConflictResolver.h  HybridLogicalClock.cpp  HybridLogicalClock.h  ITransport.h  SchemaLogCapture.cpp  SchemaLogCapture.h  SharedFolderTransport.cpp  SharedFolderTransport.h  SyncEngine.cpp  SyncEngine.h  SyncQuery.cpp  SyncQuery.h  SyncableDatabase.cpp  SyncableDatabase.h
tests/: DelayedTransport.h  tst_changeset.cpp  tst_conflict.cpp  tst_existing_databases.cpp  tst_fts.cpp  tst_hlc.cpp  tst_qsqldatabase_integration.cpp  tst_qsqlite_sync_driver.cpp  tst_robustness.cpp  tst_schema_log.cpp  tst_schema_migration.cpp  tst_schema_version.cpp  tst_snapshot.cpp  tst_sync_errors.cpp  tst_sync_integration.cpp  tst_syncquery.cpp
